--- a/index.html
+++ b/index.html
@@ -15,5 +15,7 @@
 		<!-- JQ CDN & Backup -->
 		<script src="//cdnjs.cloudflare.com/ajax/libs/jquery/2.0.3/jquery.min.js"></script>
 		<script>!window.jQuery && document.write(unescape('%3Cscript src="/js/jquery.2.0.3.min.js"%3E%3C/script%3E'))</script>
+		
+		<script src="js/main.js"></script>
 	</body>
 </html>
