--- a/index.html
+++ b/index.html
@@ -7,7 +7,9 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<meta name="description" content="untitled">
 		
-		<link rel="stylesheet" type="text/css" href="css/system.css" />
+		<!--[if ! lte IE 8]><!--><link rel="stylesheet" type="text/css" href="/css/system.css" /><!--<![endif]-->
+		<!--[if lte IE 8]><link rel="stylesheet" type="text/css" href="/css/legacy.css" /><![endif]-->
+		
 	</head>
 	<body>
 		
