--- a/styleguide.html
+++ b/styleguide.html
@@ -7,10 +7,6 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<meta name="description" content="untitled">
 		
-		<script type="text/javascript" src="//use.typekit.net/mex6mqg.js"></script>
-		<script type="text/javascript">try{Typekit.load();}catch(e){}</script>
-		
-		<link rel="stylesheet" type="text/css" href="css/adv-font/style.css" />
 		<link rel="stylesheet" type="text/css" href="css/styleguide.css" />
 		<link rel="stylesheet" type="text/css" href="css/system.css" />
 	</head>
@@ -60,7 +56,7 @@
 			</section>
 			<section>
 				<h2 class="style-section-title">Icons</h2>
-				<p>view icon-font details <a href="css/adv-font/demo.html">here</a>.</p>
+				<p>insert icons here</p>
 			</section>
 			<section>
 				<h2 class="style-section-title">Typography</h2>
@@ -690,7 +686,6 @@
 		<!-- JQ CDN & Backup -->
 		<script src="//cdnjs.cloudflare.com/ajax/libs/jquery/2.0.3/jquery.min.js"></script>
 		<script>!window.jQuery && document.write(unescape('%3Cscript src="/js/jquery.2.0.3.min.js"%3E%3C/script%3E'))</script>
-		<script src="//cdnjs.cloudflare.com/ajax/libs/chosen/1.1.0/chosen.jquery.min.js"></script>
 		
 		<script src="js/main.js"></script>
 	</body>
